--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Portfolio of My Name</title>
+	<title>CMPM 147 Portfolio</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   <meta charset="UTF-8" />
@@ -18,15 +18,18 @@
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
-        <h1>Portfolio of My Name</h1>
+        <h1>Hi, I'm Roman Luo</h1>
 		<section class="two-column">
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
                     <div class="image-wrapper">
-                        <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+                        <img class="ID-photo" src="./img/ID.png">
                     </div>
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
+					<p>Hi, I'm Roman, and I'm a 3rd year csgd major. 
+						I play variety of games. 
+						I have decent interview experience with C, C++ and python, 
+						but I'm relatively new to js and excited to learn more about it :3</p>
 			</div>
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
