--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -79,12 +79,13 @@
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>A grammar is defined with simple replacement tokens. A replacer() function picks a random replacement for any token that appears in the text.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p>Overall, I think I put a decent amount of effort into this first experiment assignment. I dived into the documentation and code, combining some trial and error with some creative thinking. It was cool to see it all come to life and I learned a lot at the same time. I put in a lot of effort and learned a lot.
+					It was interesting to create a unique text generator like this :D</p>
 			</div>
 
 		</section>
