--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -54,7 +54,7 @@
 			<div class="minor-section">
 				<h2>Technical</h2>
 				<div class="minor-section">
-					<h2>Technical</h2>
+					<!-- <h2>Technical</h2> -->
 					<p>Relation to inspiring image:</p>
 					<ul>
 						<li>
