--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -94,7 +94,7 @@
 							<strong>Incidentals:</strong> he codes are rendered with some additional variation. If the audience were to fill the grid with just one code, there should still be some spatial variation to be seen.
 						</li>
 						<li>
-							<strong>Life:</strong> The shows signs of life. Either there is some passive animation (based on time, via millis), or there is animation that response to the mouse position (via mouseX/mouseY).
+							<strong>Life(YOU CAN OPEN THE CHESTS AND WATER IS MOVING):</strong> The shows signs of life.
 						</li>
 
 					</ul>
