--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -25,7 +25,7 @@
 	<!-- Use me for a JavaScript OOP Project -->
 	<script type="text/javascript" src="./js/project.js" DEFER></script>
 	<!-- Use me for a p5.js project -->
-	<script type="text/javascript" src="./js/sketch.js" DEFER></script>
+	<!-- <script type="text/javascript" src="./js/sketch.js" DEFER></script> -->
 	<script type="text/javascript" src="./js/sketch2.js" DEFER></script>
 </head>
 <body>
@@ -40,26 +40,19 @@
 					<span id="seedReport"></span>
 					<hr />
 					<span id="canvasContainer" style="margin: 10px;"></span>
-					<textarea cols="30" rows="30" id="asciiBox" style="opacity: 0.5; letter-spacing: 1ex; width: 320px; margin: 10px; font-family: monospace;"></textarea>
+					<textarea cols="30" rows="30" id="asciiBox" style="opacity: 0.5; letter-spacing: 1ex; width: 500px; margin: 10px; font-family: monospace;"></textarea>
+					<!-- canvas will be added here -->
+				</div>
+				<div id="canvas-container2">
+					<span id="seedReport2"></span>
+					<hr />
+					<span id="canvasContainer2" style="margin: 10px;"></span>
+					<textarea cols="30" rows="30" id="asciiBox2" style="opacity: 0.5; letter-spacing: 1ex; width: 500px; margin: 10px; font-family: monospace;"></textarea>
 					<!-- canvas will be added here -->
 				</div>
                 <div class="fullscreen-box">
                     <button id="fullscreen">Fullscreen</button>
 					<button id="reseedButton">Reseed</button>
-                </div>
-			</div>
-
-			<div class="minor-section">
-				<div id="canvas-container2">
-					<span id="seedReport2"></span>
-					<hr />
-					<span id="canvasContainer2" style="margin: 10px;"></span>
-					<textarea cols="30" rows="30" id="asciiBox2" style="opacity: 0.5; letter-spacing: 1ex; width: 320px; margin: 10px; font-family: monospace;"></textarea>
-					<!-- canvas will be added here -->
-				</div>
-                <div class="fullscreen-box">
-                    <button id="fullscreen2">Fullscreen</button>
-					<button id="reseedButton2">Reseed</button>
                 </div>
 			</div>
 
