text open chest

--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -42,6 +42,7 @@
 					<span id="canvasContainer" style="margin: 10px;"></span>
 					<textarea cols="30" rows="30" id="asciiBox" style="opacity: 0.5; letter-spacing: 1ex; width: 500px; margin: 10px; font-family: monospace;"></textarea>
 					<!-- canvas will be added here -->
+					<p>You can open the chest with your mouse :D</p>
 				</div>
 				<div id="canvas-container2">
 					<span id="seedReport2"></span>
